Added login page, initial routing
